# evm-protocol-adapter

./: .env-example  .gitignore  .gitmodules  .prettierignore  .solhint.json  Cargo.toml  EVMProtocolAdapter.drawio  LICENSE  LICENSE.md  README.md  RELEASE_CHECKLIST.md  bun.lockb  deployments.json  forge-deep.toml  foundry.toml  justfile  package.json  remappings.txt  slither.config.json
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: bindings.yml  ci.yml  contracts.yml  gas-report.yml  use-template.yml
bindings/: .env-example  Cargo.toml  README.md  build.rs  test_tx01.json  test_tx1.json  test_tx10.json  test_tx15.json  test_tx20.json  test_tx25.json  test_tx30.json  test_tx35.json  test_tx40.json  test_tx5.json
bindings/examples/: erc20_forwarder.rs  generate_trivial_transaction.rs
bindings/src/: Permit2.json  abi.rs  addresses.rs  call.rs  contract.rs  conversion.rs  erc20_forwarder.rs  error.rs  helpers.rs  lib.rs  permit2.rs  protocol_adapter_v1_0_0_beta.rs
bindings/tests/: contract.rs  conversion.rs  deployments.rs
contracts/: .env-example  .gas-snapshot  .solhint.json  .solhint.other.json  README.md  foundry.toml  package.json  slither.config.json
contracts/script/: Base.s.sol  Deploy.s.sol  DeployERC20Forwarder.s.sol  DeployERC20Forwarder.sol  DeployPermit2Dummy.s.sol  DeployProtocolAdapter.s.sol  DeployRiscZeroVerifierRouter.s.sol  DeployRiscZeroVerifierRouterMock.s.sol  Emitter.s.sol  ExecuteExampleTx.s.sol  ExecuteTransaction.s.sol  constructor-args.txt
contracts/src/: ERC20Forwarder.sol  ForwarderBase.sol  ProtocolAdapter.sol  Resource.sol  Transaction.sol  Types.sol  Wrapper.sol  emitter.sol
contracts/src/examples/: BlockTimeForwarder.sol
contracts/src/forwarders/: BlockTimeForwarder.sol  ERC20Forwarder.sol  ERC20ForwarderInput.sol  ERC20ForwarderPermit2.sol  ERC20ForwarderV2.sol  EmergencyMigratableForwarderBase.sol  ForwarderBase.sol  MultiERC20Forwarder.sol  Permit2Dummy.sol
contracts/src/interfaces/: IBlobStorage.sol  ICommitmentAccumulator.sol  ICommitmentTree.sol  IEmergencyMigratable.sol  IForwarder.sol  INullifierSet.sol  IProtocolAdapter.sol  IUpdatable.sol  IVersion.sol
contracts/src/libs/: ArrayLookup.sol  ComputableComponents.sol  EllipticCurveK256.sol  Identities.sol  MerkleTree.sol  (+7 more)
contracts/test/: Benchmark.t.sol  Deploy.t.sol  DeployProtocolAdapter.sol  DeployProtocolAdapter.t.sol  Deployment.t.sol  ERC20Forwarder.t.sol  ERC20ForwarderInput.t.sol  EmergencyMigratableForwarderBase.t.sol  ForwarderBase.t.sol  Identities.t.sol  MerkleProofVerification.t.sol  Permit2.t.sol  ProtocolAdapter.t.sol  ProtocolAdapterMock.t.sol  Resource.t.sol  SHA256.t.sol  TagLookup.t.sol  mint.json  simple_transfer_mint.json  transfer.json
example-tx-generation/: Cargo.toml  README.md
example-tx-generation/src/: main.rs
juvix/: ERC20Resource.juvix  ERC20WrapperContractResource.juvix  Helpers.juvix  MagicNumbers.juvix  Package.juvix  Types.juvix  juvix.lock.yaml
juvix/Transaction/: Wrap.juvix
lib/: DeepTest.sol
record-deployment/: Cargo.toml
record-deployment/src/: main.rs
record-deployment/tests/: record.rs
script/: Base.s.sol  Deploy.s.sol  DeployERC20Forwarder.sol  DeployERC20Wrapper.s.sol  DeployProtocolAdapter.s.sol  constructor-args.txt
simple_transfer/: Cargo.toml  main.rs
simple_transfer/src/: erc20_forwarder.rs  keychain.rs  lib.rs  permit2.rs
src/: CommitmentAccumulator.sol  Constants.sol  ERC20Forwarder.sol  ERC20ResourceWrapper.sol  ERC20Wrapper.sol  ForwarderBase.sol  NullifierSet.sol  ProtocolAdapter.sol  ResourceWrapperBase.sol  Types.sol  WrapperBase.sol
src/Interfaces/: IGpsStatementVerifier.sol  IProtocolAdapter.sol  IResourceWrapper.sol  IStarkVerifier.sol  IWrapper.sol
src/ProvingSystem/: Delta.sol  Logic.sol
src/interfaces/: ICommitmentAccumulator.sol  IForwarder.sol  IGpsStatementVerifier.sol  INullifierSet.sol  IProtocolAdapter.sol  IWrapper.sol
src/libs/: AppData.sol  AppDataOLD.sol  ArrayLookup.sol  ComputableComponents.sol  Delta.sol  EllipticCurveK256.sol  Identities.sol  Map.sol  Poseidon.sol  Reference.sol  RiscZeroUtils.sol  SHA256.sol
src/proving/: Compliance.sol  Delta.sol  Logic.sol  RiscZeroVerifier.sol
src/state/: BlobStorage.sol  CommitmentAccumulator.sol  ImprovedCommitmentAccumulator.sol  ImprovedMerkleTree.sol  MerkleTree.sol  NullifierSet.sol  SMT.sol
test/: BlobStorage.b.sol  BlobStorage.t.sol  ComplianceProof.t.sol  Demo.t.sol  Deploy.t.sol  Deployment.t.sol  EncodingTest.t.sol  HashBenchmark.sol  Identities.t.sol  Logging.sol  MagicNumbers.t.sol  MockDelta.sol  MockDelta.t.sol  MockDeltaProof.sol  MockDeltaProof.t.sol  MockRiscZeroProof.sol  MockRiscZeroProof.t.sol  MyTest.sol  Poseidon.b.sol  ProtocolAdapter.t.sol  SHA256.sol  SigningExample.t.sol
test/BlobStorage/: BlobStorage.t.sol  BlobStorageMock.sol
test/CommitmentAccumulator/: CommitmentAccumulatorMock.sol  LargeTree.t.sol  SmallFullTree.t.sol  SmallPartialTree.t.sol
test/NullifierSet/: NullifierSet.t.sol  NullifierSetMock.sol
test/mocks/: CommitmentAccumulatorMock.sol  Example.sol  ExampleComplianceProof.sol  ExampleLogicProof.sol  ICommitmentAccumulatorMock.sol  ImprovedCommitmentAccumulatorMock.sol  MockDelta.sol  MockDelta.t.sol  MockRiscZeroProof.sol  MockRiscZeroProof.t.sol  MockTree.sol  MockTypes.sol
test/proofs/: ComplianceProof.t.sol  DeltaProof.t.sol  LogicProof.t.sol
test/state/: BlobStorage.t.sol  CommitmentAccumulator.t.sol  CommitmentAccumulatorBenchmark.t.sol  LargeTree.t.sol  MerkleTree.t.sol  NullifierSet.t.sol  SmallFullTree.t.sol  SmallPartialTree.t.sol
(+93 files in other folders)
