[workspace]
resolver = "3"
members = ["bindings", "example-tx-generation"]

[workspace.package]
keywords = ["anoma", "evm", "protocol-adapter"]
authors = ["Anoma Foundation"]
license = "MIT"
repository = "https://github.com/anoma/pa-evm"
homepage = "https://anoma.net/"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.4.0", features = ["full", "eip712", "node-bindings"] }
alloy-chains = "0.2.27"
anoma-rm-risc0 = { version = "1.1.1", features = ["bonsai", "aggregation"] }
anoma-rm-risc0-test-app = { version = "1.1.1", features = ["bonsai"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["rt-multi-thread"] }

anoma-pa-evm-bindings = { path = "bindings" }
