[package]
name = "test-anoma-pa-evm-bindings"
version = "1.0.0"
description = "The Anoma EVM protocol adapter contract bindings and deployments."
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alloy = { version = "1.4.0", features = ["full", "eip712", "node-bindings"] }
alloy-chains = "0.2.27"
anoma-rm-risc0 = { version = "1.0.0", features = ["bonsai", "aggregation"] }
anoma-rm-risc0-test-app = { version = "1.0.0", features = ["bonsai"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
serde = { version = "1.0.228", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["rt-multi-thread"] }
