[package]
name = "test-anoma-pa-evm-bindings"
version = "1.0.1"
description = "The Anoma EVM protocol adapter contract bindings and deployments."
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
anoma-rm-risc0 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }