[package]
name = "example-tx-generation"
description = "Generate example transactions consuming and creating resources with the trivial resource logic."
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anoma-rm-risc0 = { workspace = true }
anoma-rm-risc0-test-app = { workspace = true }
test-anoma-pa-evm-bindings = { workspace = true }
dotenvy = { workspace = true }

