[package]
publish = false
name = "record-deployment"
version = "0.0.0"
description = "Update deployments.json from Foundry broadcast artifacts."
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
alloy-chains = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3"
